# QuantumeTrade-

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  pnpm-workspace.yaml  start.ps1  start.sh  stop.ps1  stop.sh  turbo.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  chart_renderer.py  crypto_expert.py  forex_expert.py  fundamental.py  gold_expert.py  journal.py  llm.py  macro.py  master.py  pattern.py  risk_agent.py  sentiment.py  stocks_expert.py  technical.py  volume.py
backend/app/alerts/: __init__.py  notifier.py
backend/app/api/: agents.py  audit.py  auth.py  backtest.py  billing.py  branding.py  copilot.py  copytrading.py  execution.py  health.py  i18n.py  journal.py  kyc.py  market.py  marketplace.py  onboarding.py  plan.py  portfolio.py  risk.py  settings.py  signals.py  strategies.py  team.py  ws.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agents.py  test_api_flow.py  test_backtest_metrics.py  test_copilot_router.py  test_edge_map.py  test_experts.py  test_health.py  test_indicators.py  test_ingestion.py  test_learning.py  test_market.py  test_markets_news.py  test_phase1_complete.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_postgres_switch.py  test_pro_analysis.py  test_realism.py  test_realtime.py  test_risk.py  test_security.py  test_signal_card.py  test_signal_engine.py  test_strategies.py  test_totp.py  test_volume_agent.py  test_walkforward.py  test_wallet.py
(+185 files in other folders)
